--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -164,7 +164,7 @@
   # Variable(s):
   #   xbc_network_manager_state: 'disabled' or 'enabled'    # Use xfce networkmanager to handle all networkwork connections instead of server configuration.(Default = disabled)
   #    
-  xbc_network_manager_state: 'disabled'
+  xbc_network_manager_state: 'enabled'
 
 
   # --- Kiosk mode ---
@@ -224,12 +224,12 @@
 
   # Blacklist
   xbc_kiosk_applist_black :
-    - debian-uxterm.desktop
+#    - debian-uxterm.desktop
     - debian-xterm.desktop
     - exo-file-manager.desktop
     - exo-mail-reader.desktop
-    - exo-preferred-applications.desktop
     - exo-terminal-emulator.desktop
+    - exo-preferred-applications.desktop
     - exo-web-browser.desktop
     - gcr-prompter.desktop
     - gcr-viewer.desktop
@@ -264,8 +264,10 @@
     - gucharmap.desktop
     - xfce-settings-manager.desktop
     - byobu.desktop
-    - nm-connection-editor.desktop
+#    - nm-connection-editor.desktop
 
   # Whitelist
-  xbc_kiosk_applist_white : 
+  xbc_kiosk_applist_white :
+    - debian-uxterm.desktop
+
 
