--- a/tasks/xubuntu-core-networkmanager.yml
+++ b/tasks/xubuntu-core-networkmanager.yml
@@ -16,9 +16,10 @@
 
   - name: "Install packages"
     apt:
-      name: "{{ item }}"
+      name: "{{ packages }}"
       state: present
-    with_items:
+    vars:
+      packages:
       - network-manager
       - network-manager-gnome
     when:  
