--- a/tasks/ubuntu-1604-amd64.yml
+++ b/tasks/ubuntu-1604-amd64.yml
@@ -31,11 +31,12 @@
 
   - name: "Install packages"
     apt:
-      name: "{{ item }}"
+      name: "{{ packages }}"
       update_cache: yes
       force: yes
       state: present
-    with_items:
+    vars:
+      packages:
       - arc-theme
       - numix-icon-theme-circle
       - fonts-roboto
