--- a/tasks/ubuntu-1804-amd64.yml
+++ b/tasks/ubuntu-1804-amd64.yml
@@ -10,7 +10,7 @@
 
   - name: "Add repositories"
     apt_repository:
-      repo: "{{ item }}"
+      repo: "{{ items }}"
       state: present
       update_cache: yes
     with_items:
@@ -25,11 +25,12 @@
 
   - name: "Install packages"
     apt:
-      name: "{{ item }}"
+      name: "{{ packages }}"
       update_cache: yes
       force: yes
       state: present
-    with_items:
+    vars:
+      packages:
       - arc-theme
       - numix-icon-theme-circle
       - fonts-roboto
