Corrected typo fixes

--- a/tasks/ubuntu-1804-amd64.yml
+++ b/tasks/ubuntu-1804-amd64.yml
@@ -10,7 +10,7 @@
 
   - name: "Add repositories"
     apt_repository:
-      repo: "{{ items }}"
+      repo: "{{ item }}"
       state: present
       update_cache: yes
     with_items:
