--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -31,7 +31,7 @@
   #
   xbc_splash_state       : 'enabled'
   xbc_splash_type        : 'file'
-  xbc_splash_image_url   : 'http://172.16.2.20/resource/greenfoodos/greenlogo.png'  
+  xbc_splash_image_url   : 'https://raw.githubusercontent.com/bitfinity-nl/ansible-role-xubuntu-core/master/files/plymouth-bitfinityos.png'  
   xbc_splash_image_file  : 'wallpaper.png' 
 
 
