Updated default wallpaper

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -97,8 +97,8 @@
   xbc_desktop_state                     : 'enabled'
   xbc_desktop_type                      : 'file'
   xbc_desktop_url                       : 'https://example.org/wallpaper.jpg'
-  xbc_desktop_file                      : 'wallpaper.png'
-  xbc_desktop_name                      : 'wallpaper.jpg'
+  xbc_desktop_file                      : 'wallpaper-bitfinityos.png'
+  xbc_desktop_name                      : 'wallpaper-bitfinityos.png'
 
   xbc_desktop_theme                     : 'Arc'
   xbc_desktop_icon_theme                : 'Numix-Circle'
@@ -150,8 +150,8 @@
   xbc_loginwp_state      : 'enabled'
   xbc_loginwp_type       : 'file'
   xbc_loginwp_url        : 'https://example.org/wallpaper.jpg'
-  xbc_loginwp_file       : 'wallpaper.png'
-  xbc_loginwp_name       : 'wallpaper.jpg'
+  xbc_loginwp_file       : 'wallpaper-bitfinityos.png'
+  xbc_loginwp_name       : 'wallpaper-bitfinityos.png'
   xbc_login_theme        : 'Arc'
   xbc_icon_theme         : 'Numix-Circle'
   xbc_font_name          : 'Roboto'
