--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -26,6 +26,11 @@
       - ansible_distribution_version == "18.04"
       - ansible_architecture == "x86_64"
 
+  - name: "Import cursor theme"
+    import_tasks: xubuntu-core-cursor-theme.yml
+    when:
+      - xbc_cursor_state == "enabled"
+
   - name: "Import kioskmode template (Autologin)"
     import_tasks: xubuntu-core-kiosk.yml
     when:
